feat: better multiple device emulation (#10)