@@ -1,4 +1,3 @@
-// Copyright 2013 Marc Bernardini.
 package com.daqifi.common.devices;
 
 import com.daqifi.io.messages.DeviceBroadcastMessage;
@@ -9,13 +8,12 @@ import com.daqifi.common.devices.channels.DigitalInputChannel;
 import com.daqifi.common.messages.ProtoMessageV2;
 import com.google.protobuf.ByteString;
 
+import java.lang.reflect.InvocationTargetException;
 import java.net.InetSocketAddress;
 import java.nio.ByteBuffer;
 import java.nio.ByteOrder;
 import java.util.ArrayList;
-import java.util.Collection;
 import java.util.HashMap;
-import java.util.HashSet;
 import java.util.Iterator;
 import java.util.Map;
 
@@ -30,7 +28,7 @@ public class DeviceFactory {
     private static Map<String, Class<? extends DeviceInterface>> deviceClasses = initializeDeviceClasses();
 
     private static Map<String, Class<? extends DeviceInterface>> initializeDeviceClasses() {
-        Map<String, Class<? extends DeviceInterface>> map = new HashMap<String, Class<? extends DeviceInterface>>();
+        Map<String, Class<? extends DeviceInterface>> map = new HashMap<>();
         map.put("Nyquist 1", Nyquist1.class);
         map.put("Nyquist 2", Nyquist2.class);
         map.put("Nyquist 3", Nyquist3.class);
@@ -52,20 +50,12 @@ public class DeviceFactory {
 
         ProtoMessageV2.DaqifiOutMessage sysinfo = message.getMessage();
         if(sysinfo != null) {
-            switch (sysinfo.getDevicePn()) {
-                case "Nq1":
-                    device = new Nyquist1();
-                    break;
-                case "Nq2":
-                    device = new Nyquist2();
-                    break;
-                case "Nq3":
-                    device = new Nyquist3();
-                    break;
-                default:
-                    device = new Nyquist1();
-                    break;
-            }
+            device = switch (sysinfo.getDevicePn()) {
+                case "Nq1" -> new Nyquist1();
+                case "Nq2" -> new Nyquist2();
+                case "Nq3" -> new Nyquist3();
+                default -> new Nyquist1();
+            };
         } else {
             device = new Nyquist1();
         }
@@ -174,16 +164,16 @@ public class DeviceFactory {
 
     public static DeviceInterface getDevice(String deviceType, String host, int port)
             throws InvalidDeviceType {
-        DeviceInterface device = null;
+        DeviceInterface device;
         try {
-            Class deviceClass = deviceClasses.get(deviceType);
-            device = (DeviceInterface) deviceClass.newInstance();
-        } catch (InstantiationException e) {
-            throw new InvalidDeviceType(deviceType);
-        } catch (IllegalAccessException e) {
+            Class<? extends DeviceInterface> deviceClass = deviceClasses.get(deviceType);
+            device = deviceClass.getDeclaredConstructor().newInstance();
+        } catch (InstantiationException |
+                 NoSuchMethodException |
+                 IllegalAccessException |
+                 InvocationTargetException ignore) {
             throw new InvalidDeviceType(deviceType);
         }
-
 
         device.setDeviceName(host);
         InetSocketAddress address = InetSocketAddress.createUnresolved(host, port);
